--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1>Pradhyumna's Portfolio</h1>
  
   <hr />
- <H2> <a href="../3.4 Birthday Invite Project/birthday.html">Birthday Project</a></H2>
+ <H2> <a href="./3.4 Birthday Invite Project/birthday.html">Birthday Project</a></H2>
 </br>  
   <img src="../assets/images/birthday-invite.png" height="200" alt="birthday invite project preview"/>
 </br>
